--- a/get-involved/index.html
+++ b/get-involved/index.html
@@ -16,10 +16,12 @@
     <header class="header scrolled">
         <div class="header-container">
             <a href="/" class="header-logo">
-                <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.5 2.8C1.4 11.3 1 12.1 1 13v3c0 .6.4 1 1 1h2"></path>
-                    <circle cx="7" cy="17" r="2"></circle>
-                    <circle cx="17" cy="17" r="2"></circle>
+                <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
+                    <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
+                    <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
+                    <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span class="logo-text">Cars <span class="logo-ampersand">&</span> Kids</span>
             </a>
@@ -80,20 +82,27 @@
         </div>
     </section>
 
+    <!-- Image -->
+    <section class="page-image">
+        <img src="../car2.webp" alt="Cars & Kids event">
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.5 2.8C1.4 11.3 1 12.1 1 13v3c0 .6.4 1 1 1h2"></path>
-                            <circle cx="7" cy="17" r="2"></circle>
-                            <circle cx="17" cy="17" r="2"></circle>
+                        <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
+                            <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
+                            <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
+                            <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <span>Cars <span class="logo-ampersand">&</span> Kids</span>
                     </div>
-                    <p class="footer-tagline">Shared experiences transfer energy and momentum.</p>
+                    <p class="footer-tagline">Energy and momentum, transferred.</p>
                 </div>
                 <div class="footer-contact">
                     <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
