--- a/contact/index.html
+++ b/contact/index.html
@@ -9,112 +9,38 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header scrolled">
-        <div class="header-container">
-            <a href="/" class="header-logo">
-                <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                    <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                    <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
-                    <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <span class="logo-text">Cars <span class="logo-ampersand">&</span> Kids</span>
-            </a>
-            <nav class="header-nav">
-                <a href="/about/" class="nav-link">About</a>
-                <a href="/get-involved/" class="nav-link">Get Involved</a>
-                <a href="/contact/" class="nav-link active">Contact</a>
-            </nav>
-            <button class="mobile-menu-btn" aria-label="Menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <line x1="3" y1="12" x2="21" y2="12"></line>
-                    <line x1="3" y1="6" x2="21" y2="6"></line>
-                    <line x1="3" y1="18" x2="21" y2="18"></line>
-                </svg>
-            </button>
+    <nav class="nav">
+        <a href="/" class="nav-logo">Cars <span>&</span> Kids</a>
+        <div class="nav-links">
+            <a href="/about/">About</a>
+            <a href="/get-involved/">Get Involved</a>
+            <a href="/contact/">Contact</a>
         </div>
-    </header>
-
-    <!-- Mobile Navigation -->
-    <nav class="mobile-nav">
-        <a href="/about/" class="mobile-nav-link">About</a>
-        <a href="/get-involved/" class="mobile-nav-link">Get Involved</a>
-        <a href="/contact/" class="mobile-nav-link">Contact</a>
     </nav>
 
-    <!-- Contact Page Content -->
-    <section class="page-section">
-        <div class="container">
-            <a href="/" class="back-link">← Back home</a>
-            <h1 class="page-title">Contact</h1>
-            <p class="page-subtitle">Questions? Ideas? Just want to say hello? We'd love to hear from you.</p>
-            
-            <div class="contact-content">
-                <a href="mailto:info@carsandkids.net" class="contact-email-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                        <polyline points="22,6 12,13 2,6"></polyline>
-                    </svg>
-                    info@carsandkids.net
-                </a>
-            </div>
-        </div>
-    </section>
+    <main class="page">
+        <a href="/" class="page-back">← Home</a>
+        <h1>Contact</h1>
+        <p class="page-intro">Questions? Ideas? Just want to say hello?</p>
 
-    <!-- Image -->
-    <section class="page-image">
-        <img src="../car3.jpeg" alt="Cars & Kids">
-    </section>
+        <a href="mailto:info@carsandkids.net" class="contact-email">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                <polyline points="22,6 12,13 2,6"></polyline>
+            </svg>
+            info@carsandkids.net
+        </a>
+    </main>
 
-    <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <div class="footer-logo">
-                        <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
-                            <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <span>Cars <span class="logo-ampersand">&</span> Kids</span>
-                    </div>
-                    <p class="footer-tagline">Energy and momentum, transferred.</p>
-                </div>
-                <div class="footer-contact">
-                    <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Cars & Kids. All rights reserved.</p>
-            </div>
+        <div class="footer-left">
+            <div class="footer-logo">Cars <span>&</span> Kids</div>
+            <p>Energy and momentum, transferred.</p>
         </div>
+        <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
     </footer>
-
-    <script>
-        // Mobile menu toggle
-        document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
-            this.classList.toggle('active');
-            document.querySelector('.mobile-nav').classList.toggle('active');
-        });
-
-        // Close mobile menu when clicking outside
-        document.addEventListener('click', (e) => {
-            const mobileNav = document.querySelector('.mobile-nav');
-            const mobileBtn = document.querySelector('.mobile-menu-btn');
-            
-            if (!mobileNav.contains(e.target) && !mobileBtn.contains(e.target)) {
-                mobileNav.classList.remove('active');
-                mobileBtn.classList.remove('active');
-            }
-        });
-    </script>
 </body>
 </html>
