--- a/index.html
+++ b/index.html
@@ -4,165 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars & Kids</title>
-    <meta name="description" content="We bring cool cars to kids in hospitals, schools, and anywhere they could use some excitement.">
+    <meta name="description" content="We bring cool cars to kids who could use some excitement.">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='40' font-weight='bold' fill='%23e63946' text-anchor='middle'%3EC%26K%3C/text%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="header-container">
-            <a href="/" class="header-logo">
-                <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Car -->
-                    <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                    <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                    <!-- Kid (simple figure) -->
-                    <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
-                    <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <span class="logo-text">Cars <span class="logo-ampersand">&</span> Kids</span>
-            </a>
-            <nav class="header-nav">
-                <a href="/about/" class="nav-link">About</a>
-                <a href="/get-involved/" class="nav-link">Get Involved</a>
-                <a href="/contact/" class="nav-link">Contact</a>
-            </nav>
-            <button class="mobile-menu-btn" aria-label="Menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <line x1="3" y1="12" x2="21" y2="12"></line>
-                    <line x1="3" y1="6" x2="21" y2="6"></line>
-                    <line x1="3" y1="18" x2="21" y2="18"></line>
-                </svg>
-            </button>
+    <nav class="nav">
+        <a href="/" class="nav-logo">Cars <span>&</span> Kids</a>
+        <div class="nav-links">
+            <a href="/about/">About</a>
+            <a href="/get-involved/">Get Involved</a>
+            <a href="/contact/">Contact</a>
         </div>
-    </header>
-
-    <!-- Mobile Navigation -->
-    <nav class="mobile-nav">
-        <a href="/about/" class="mobile-nav-link">About</a>
-        <a href="/get-involved/" class="mobile-nav-link">Get Involved</a>
-        <a href="/contact/" class="mobile-nav-link">Contact</a>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1 class="hero-title">Cars <span class="title-ampersand">&</span> Kids</h1>
-            <p class="hero-description">We bring cool cars to kids who could use some excitement. Hospitals. Schools. Anywhere kids need a lift.</p>
-            <div class="hero-ctas">
-                <a href="/get-involved/" class="btn btn-primary">Get Involved</a>
-                <a href="/contact/" class="btn btn-secondary">Say Hello</a>
+    <main>
+        <!-- Hero -->
+        <section class="hero">
+            <div class="hero-text">
+                <h1>Cool cars for kids who need a lift.</h1>
+                <p>We show up at hospitals, schools, and community centers with incredible cars—and let kids have a moment.</p>
+                <div class="hero-actions">
+                    <a href="/get-involved/" class="btn-primary">Get Involved</a>
+                    <a href="mailto:info@carsandkids.net" class="btn-text">Say hello →</a>
+                </div>
             </div>
-        </div>
-    </section>
+            <div class="hero-image">
+                <img src="images/car1.jpg" alt="Car at event">
+            </div>
+        </section>
 
-    <!-- Hero Image -->
-    <section class="hero-image">
-        <img src="car1.jpg" alt="Cool car at a Cars & Kids event">
-    </section>
+        <!-- Photo Grid -->
+        <section class="photo-grid">
+            <img src="images/car2.webp" alt="Car">
+            <img src="images/car5.jpg" alt="Car">
+            <img src="images/car6.jpg" alt="Car">
+        </section>
 
-    <!-- Belief Section -->
-    <section class="section belief">
-        <div class="container">
-            <h2 class="section-title">What We Believe</h2>
-            <p class="belief-text">We believe in a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine and lights something up inside them.</p>
-            <p class="belief-text">We believe in the visceral experience of a car—auditory, visual, and physical—having the power to invigorate. The rumble of an engine, the gleam of the paint, the feeling of sitting behind the wheel. These things stick with you.</p>
-        </div>
-    </section>
+        <!-- Belief -->
+        <section class="belief">
+            <div class="belief-content">
+                <h2>What we believe</h2>
+                <p>We believe in a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine.</p>
+                <p>We believe in the visceral experience of a car—auditory, visual, and physical—having the power to invigorate.</p>
+            </div>
+        </section>
 
-    <!-- Image Break -->
-    <section class="image-break">
-        <img src="car2.webp" alt="Kids experiencing a cool car">
-    </section>
+        <!-- Big Image -->
+        <section class="full-image">
+            <img src="images/car3.jpeg" alt="Cars & Kids event">
+        </section>
 
-    <!-- About Section -->
-    <section class="section about">
-        <div class="container">
-            <h2 class="section-title">What We Do</h2>
-            <p class="about-text">We show up with a handful of incredible cars—classics, exotics, whatever we've got—and let kids climb in, hear the engines, and just have a moment. No agenda. Just cars and good energy.</p>
-        </div>
-    </section>
-
-    <!-- Get Involved Section -->
-    <section class="section get-involved">
-        <div class="container">
-            <h2 class="section-title">Want to Help?</h2>
-            <div class="involve-links">
-                <a href="/get-involved/" class="involve-link">
-                    <span class="involve-arrow">→</span>
-                    Bring your car
+        <!-- How to Help -->
+        <section class="help">
+            <h2>Want to help?</h2>
+            <div class="help-options">
+                <a href="/get-involved/" class="help-option">
+                    <span class="help-label">Bring your car</span>
+                    <span class="help-arrow">→</span>
                 </a>
-                <a href="/get-involved/" class="involve-link">
-                    <span class="involve-arrow">→</span>
-                    Host a visit
+                <a href="/get-involved/" class="help-option">
+                    <span class="help-label">Request a visit</span>
+                    <span class="help-arrow">→</span>
                 </a>
-                <a href="/get-involved/" class="involve-link">
-                    <span class="involve-arrow">→</span>
-                    Support us
+                <a href="/get-involved/" class="help-option">
+                    <span class="help-label">Support us</span>
+                    <span class="help-arrow">→</span>
                 </a>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Footer -->
+        <!-- More Photos -->
+        <section class="photo-row">
+            <img src="images/cars4.webp" alt="Car">
+            <img src="images/car7.jpg" alt="Car">
+        </section>
+    </main>
+
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <div class="footer-logo">
-                        <svg class="logo-icon" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M38 22h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9-.8-.2-3.5-.8-3.5-.8s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7h-7c-.6 0-1.1.4-1.4.9l-1.5 2.8c-.3.6-.7 1.4-.7 2v3c0 .6.4 1 1 1h2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <circle cx="27" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="37" cy="22" r="2.5" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="10" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
-                            <path d="M10 12v8M6 16h8M10 20l-3 6M10 20l3 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <span>Cars <span class="logo-ampersand">&</span> Kids</span>
-                    </div>
-                    <p class="footer-tagline">Energy and momentum, transferred.</p>
-                </div>
-                <div class="footer-contact">
-                    <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Cars & Kids. All rights reserved.</p>
-            </div>
+        <div class="footer-left">
+            <div class="footer-logo">Cars <span>&</span> Kids</div>
+            <p>Energy and momentum, transferred.</p>
         </div>
+        <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
     </footer>
-
-    <script>
-        // Header scroll effect
-        window.addEventListener('scroll', () => {
-            const header = document.querySelector('.header');
-            if (window.scrollY > 50) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
-        });
-
-        // Mobile menu toggle
-        document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
-            this.classList.toggle('active');
-            document.querySelector('.mobile-nav').classList.toggle('active');
-        });
-
-        // Close mobile menu when clicking outside
-        document.addEventListener('click', (e) => {
-            const mobileNav = document.querySelector('.mobile-nav');
-            const mobileBtn = document.querySelector('.mobile-menu-btn');
-            
-            if (!mobileNav.contains(e.target) && !mobileBtn.contains(e.target)) {
-                mobileNav.classList.remove('active');
-                mobileBtn.classList.remove('active');
-            }
-        });
-    </script>
 </body>
 </html>
