Style updates: blue accent, centered sections, bold labels
- Changed ampersand color from red to modern blue (#2563eb)
- Centered "What We Do" section (was left-aligned)
- Removed "About" label, just "What We Do" now
- Made section labels bold (What We Do, What We Believe)
- Updated favicon to match blue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars & Kids</title>
     <meta name="description" content="We bring cool cars to kids who could use some excitement.">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='40' font-weight='bold' fill='%23e63946' text-anchor='middle'%3EC%26K%3C/text%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='40' font-weight='bold' fill='%232563eb' text-anchor='middle'%3EC%26K%3C/text%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,8 +44,7 @@
         <!-- About -->
         <section id="about" class="about">
             <div class="about-content">
-                <div class="about-label">About</div>
-                <h2>What we do</h2>
+                <h2>What We Do</h2>
                 <p>We show up with a handful of incredible cars—classics, exotics, whatever we've got—and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs. No agenda. Just cars and good energy.</p>
             </div>
         </section>
@@ -58,7 +57,7 @@
         <!-- Belief -->
         <section class="belief">
             <div class="belief-content">
-                <div class="belief-label">What we believe</div>
+                <div class="belief-label">What We Believe</div>
                 <p>We believe in a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine.</p>
                 <p>We believe in the visceral experience of a car—auditory, visual, and physical—having the power to invigorate.</p>
             </div>
