Update copy: remove redundant phrase, fix belief section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section id="about" class="about">
             <div class="about-content">
                 <h2>What We Do</h2>
-                <p>We show up with a handful of incredible cars—classics, exotics, whatever we've got—and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs. No agenda. Just cars and good energy.</p>
+                <p>We show up with a handful of incredible cars—classics, exotics, whatever we've got—and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs.</p>
             </div>
         </section>
 
@@ -58,8 +58,8 @@
         <section class="belief">
             <div class="belief-content">
                 <div class="belief-label">What We Believe</div>
-                <p>We believe in a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine.</p>
-                <p>We believe in the visceral experience of a car—auditory, visual, and physical—having the power to invigorate.</p>
+                <p>There is a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine.</p>
+                <p>The visceral experience of a car—auditory, visual, and physical—has the power to invigorate.</p>
             </div>
         </section>
 
