Fix layout and copy issues
- Everything centered on all screen sizes
- Nav links visible on mobile (removed display:none)
- Removed em-dashes that caused awkward line breaks
- Hero: image on top, text centered below
- Consistent centered layout throughout

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <main>
         <!-- Hero -->
         <section class="hero">
-            <div class="hero-text">
-                <h1>Cool cars for kids who need a lift.</h1>
-                <p>We show up at hospitals, schools, and community centers with incredible cars—and let kids have a moment.</p>
-                <a href="#get-involved" class="btn-primary">Get Involved</a>
-            </div>
             <div class="hero-image">
                 <img src="images/car1.jpg" alt="Car at event">
+            </div>
+            <div class="hero-text">
+                <h1>Cool cars for kids who need a lift.</h1>
+                <p>We show up at hospitals, schools, and community centers with incredible cars and let kids have a moment.</p>
+                <a href="#get-involved" class="btn-primary">Get Involved</a>
             </div>
         </section>
 
@@ -45,7 +45,7 @@
         <section id="about" class="about">
             <div class="about-content">
                 <h2>What We Do</h2>
-                <p>We show up with a handful of incredible cars—classics, exotics, whatever we've got—and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs.</p>
+                <p>We show up with incredible cars (classics, exotics, whatever we've got) and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs.</p>
             </div>
         </section>
 
@@ -58,8 +58,8 @@
         <section class="belief">
             <div class="belief-content">
                 <div class="belief-label">What We Believe</div>
-                <p>There is a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment—a moment that breaks the routine.</p>
-                <p>The visceral experience of a car—auditory, visual, and physical—has the power to invigorate.</p>
+                <p>There is a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment. A moment that breaks the routine.</p>
+                <p>The visceral experience of a car (auditory, visual, and physical) has the power to invigorate.</p>
             </div>
         </section>
 
@@ -77,7 +77,7 @@
             <div class="involve-cards">
                 <button onclick="openModal('drive')" class="involve-card">
                     <h3><span>→</span> Bring your car</h3>
-                    <p>Have a cool car? Classic, exotic, or just something special—share it with kids who'd love to see it.</p>
+                    <p>Have a cool car? Classic, exotic, or something special. Share it with kids who'd love to see it.</p>
                 </button>
 
                 <button onclick="openModal('visit')" class="involve-card">
