Rewrite copy and restore side-by-side hero
- Hero: text on left, image on right (desktop)
- Rewrote all copy to focus on empowerment
- Removed "whatever we've got" - now "carefully selected cars"
- Belief section: about inspiring kids through car experiences
- Cleaner, more intentional language throughout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       gtag('js', new Date());
       gtag('config', 'G-95511G6L8Z');
     </script>
-    <meta name="description" content="We bring cool cars to kids who could use some excitement.">
+    <meta name="description" content="We bring amazing cars to kids at hospitals, schools, and community programs.">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='40' font-weight='bold' fill='%232563eb' text-anchor='middle'%3EC%26K%3C/text%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,13 +32,13 @@
     <main>
         <!-- Hero -->
         <section class="hero">
-            <div class="hero-image">
-                <img src="images/car1.jpg" alt="Car at event">
-            </div>
             <div class="hero-text">
                 <h1>Cool cars for kids who need a lift.</h1>
-                <p>We show up at hospitals, schools, and community centers with incredible cars and let kids have a moment.</p>
+                <p>We bring amazing cars to hospitals, schools, and community programs to create moments of real excitement for kids.</p>
                 <a href="#get-involved" class="btn-primary">Get Involved</a>
+            </div>
+            <div class="hero-image">
+                <img src="images/car1.jpg" alt="Car at event">
             </div>
         </section>
 
@@ -53,7 +53,7 @@
         <section id="about" class="about">
             <div class="about-content">
                 <h2>What We Do</h2>
-                <p>We show up with incredible cars (classics, exotics, whatever we've got) and let kids climb in, hear the engines, and just have a moment. We visit hospitals, schools, and community programs.</p>
+                <p>We bring carefully selected cars to kids at hospitals, schools, and community programs. Kids get to climb in, hear the engines, and experience something memorable. It's about creating real moments of empowerment and joy.</p>
             </div>
         </section>
 
@@ -66,8 +66,8 @@
         <section class="belief">
             <div class="belief-content">
                 <div class="belief-label">What We Believe</div>
-                <p>There is a fundamental energy and momentum. Sometimes what kids need is a little fun and excitement for empowerment. A moment that breaks the routine.</p>
-                <p>The visceral experience of a car (auditory, visual, and physical) has the power to invigorate.</p>
+                <p>Cars have a unique power to inspire. The sound, the presence, the experience of being behind the wheel. These moments can shift a kid's day, their week, or even how they see themselves.</p>
+                <p>We're here to transfer that energy directly to kids who can use it most.</p>
             </div>
         </section>
 
@@ -80,22 +80,22 @@
         <!-- Get Involved -->
         <section id="get-involved" class="get-involved">
             <h2>Get Involved</h2>
-            <p class="get-involved-intro">There are a few ways you can help us bring cool cars to kids.</p>
+            <p class="get-involved-intro">Join us in bringing amazing cars to kids.</p>
             
             <div class="involve-cards">
                 <button onclick="openModal('drive')" class="involve-card">
                     <h3><span>→</span> Bring your car</h3>
-                    <p>Have a cool car? Classic, exotic, or something special. Share it with kids who'd love to see it.</p>
+                    <p>Own something special? Help us create an unforgettable experience for kids.</p>
                 </button>
 
                 <button onclick="openModal('visit')" class="involve-card">
                     <h3><span>→</span> Request a visit</h3>
-                    <p>Hospital, school, or community program? Request a visit and we'll bring the cars to you.</p>
+                    <p>Work with a hospital, school, or program? We'd love to come to you.</p>
                 </button>
 
                 <button onclick="openModal('support')" class="involve-card">
                     <h3><span>→</span> Support us</h3>
-                    <p>Help us reach more kids. Your support makes these moments possible.</p>
+                    <p>Your support helps us reach more kids and create more moments.</p>
                 </button>
             </div>
         </section>
@@ -103,7 +103,7 @@
         <!-- Contact -->
         <section id="contact" class="contact">
             <h2>Contact</h2>
-            <p class="contact-intro">For inquiries, partnerships, or general information, please reach out.</p>
+            <p class="contact-intro">For inquiries, partnerships, or general information.</p>
             <a href="mailto:info@carsandkids.net" class="contact-email">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
