Center hero text, update car description and get involved copy

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="about" class="about">
             <div class="about-content">
                 <h2>What We Do</h2>
-                <p>We bring carefully selected cars to kids at hospitals, schools, and community programs. Kids get to climb in, hear the engines, and experience something memorable. It's about creating real moments of empowerment and joy.</p>
+                <p>We bring specially curated exotics, classics, and supercars to kids at hospitals, schools, and community programs. Kids get to climb in, hear the engines, and experience something memorable. It's about creating real moments of empowerment and joy.</p>
             </div>
         </section>
 
@@ -80,7 +80,7 @@
         <!-- Get Involved -->
         <section id="get-involved" class="get-involved">
             <h2>Get Involved</h2>
-            <p class="get-involved-intro">Join us in bringing amazing cars to kids.</p>
+            <p class="get-involved-intro">Join us in bringing amazing cars to kids and help empower them through unforgettable experiences.</p>
             
             <div class="involve-cards">
                 <button onclick="openModal('drive')" class="involve-card">
