Left-align sections, add image between Why Cars and Belief, remove text width limits
- Left-align About, Why Cars, Belief, Get Involved, Contact sections
- Remove max-width constraints so text spans full width
- Add full-width image between Why Cars and What We Believe sections

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             </div>
         </section>
 
+        <!-- Image between Why Cars and Belief -->
+        <section class="full-image">
+            <img src="images/cars4.webp" alt="Cars & Kids event">
+        </section>
+
         <!-- Belief -->
         <section class="belief">
             <div class="belief-content">
@@ -87,7 +92,7 @@
 
         <!-- Photo Row -->
         <section class="photo-row">
-            <img src="images/cars4.webp" alt="Car">
+            <img src="images/car5.jpg" alt="Car">
             <img src="images/car7.jpg" alt="Car">
         </section>
 
