Update hero, nav links, and combine Why Cars paragraphs
- Hero: bold title "We bring extraordinary cars to kids who need a lift."
- Nav: add What We Do, Why Cars, What We Believe links
- Combine first two paragraphs in Why Cars section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <nav class="nav">
         <a href="/" class="nav-logo">Cars <span>&</span> Kids</a>
         <div class="nav-links">
-            <a href="#about">About</a>
+            <a href="#about">What We Do</a>
+            <a href="#why-cars">Why Cars</a>
+            <a href="#belief">What We Believe</a>
             <a href="#get-involved">Get Involved</a>
             <a href="#contact">Contact</a>
         </div>
@@ -33,8 +35,8 @@
         <!-- Hero -->
         <section class="hero">
             <div class="hero-text">
-                <h1>Cars & Kids</h1>
-                <p>We bring extraordinary cars to kids who need a lift—physically, emotionally, or both.</p>
+                <h1>We bring extraordinary cars to kids who need a lift.</h1>
+                <p>Physically, emotionally, or both.</p>
                 <a href="#get-involved" class="btn-primary">Get Involved</a>
             </div>
             <div class="hero-image">
@@ -65,11 +67,10 @@
         </section>
 
         <!-- Why Cars -->
-        <section class="why-cars">
+        <section id="why-cars" class="why-cars">
             <div class="why-cars-content">
                 <h2>Why Cars</h2>
-                <p>Cars command attention. They carry weight. Sound. Presence.</p>
-                <p>When something like that shows up for you, it changes how the day feels. Sometimes how the week feels. Occasionally how you see yourself.</p>
+                <p>Cars command attention. They carry weight. Sound. Presence. When something like that shows up for you, it changes how the day feels. Sometimes how the week feels. Occasionally how you see yourself.</p>
                 <p>We believe that presence—real, tangible presence—can interrupt fear, boredom, pain, or limitation.<br>Cars just happen to be an unusually effective delivery system.</p>
             </div>
         </section>
@@ -80,7 +81,7 @@
         </section>
 
         <!-- Belief -->
-        <section class="belief">
+        <section id="belief" class="belief">
             <div class="belief-content">
                 <div class="belief-label">What We Believe</div>
                 <p>Momentum is not abstract.<br>Energy transfers when people show up with intention.</p>
