Replace em-dashes with parentheses in Why Cars section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="why-cars-content">
                 <h2>Why Cars</h2>
                 <p>Cars command attention. They carry weight. Sound. Presence. When something like that shows up for you, it changes how the day feels. Sometimes how the week feels. Occasionally how you see yourself.</p>
-                <p>We believe that presence—real, tangible presence—can interrupt fear, boredom, pain, or limitation.<br>Cars just happen to be an unusually effective delivery system.</p>
+                <p>We believe that presence (real, tangible presence) can interrupt fear, boredom, pain, or limitation.<br>Cars just happen to be an unusually effective delivery system.</p>
             </div>
         </section>
 
