Update driver form description: no commitment, few hours on weekend

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <button class="modal-close" onclick="closeModal('drive')">&times;</button>
             <div class="modal-header">
                 <h2>Drive With Cars & Kids</h2>
-                <p>Tell us about yourself and your car. We'll follow up with next steps.</p>
+                <p>No commitment, just interest. Events are typically a few hours on a weekend. Tell us about yourself and your car, and we'll follow up with next steps.</p>
             </div>
             <div class="modal-body">
                 <form id="driveForm" class="custom-form">
